# ray-engine

./: .gitmodules  CMakeLists.txt  GUIDELINES.md  Makefile  README.md
engine/: main.cpp
engine/cpp/: hello.cpp
engine/src/: engine.hpp
engine/src/cpp/: application.cpp  hello.cpp  log.cpp
engine/src/include/: application.hpp  engine.hpp  entrypoint.hpp  hello.hpp
engine/src/include/application/: application.hpp
engine/src/include/events/: applicationevents.h  applicationevents.hpp  event.h  event.hpp  keyevent.h  keyevent.hpp  mouseevent.h  mouseevent.hpp
engine/src/include/log/: log.hpp
engine/src/include/pch/: enginepch.hpp
engine/src/include/window/: window.hpp
lightray/src/: main.cpp
